# discord-subscription-bot

./: .gitignore  LICENSE  README.md  bot.py  bot_data_model.py  bot_logic.py  bot_user.py  crypto.py  dbmananaging.py  devnet_mint_transfer.ipynb  launch_config.py  main.py  pyproject.toml  subscription_bot.py  test.ipynb
src/discord-subscription-bot/: bot_data_model.py  crypto.py  dbmananaging.py  devnet_mint_transfer.ipynb  launch_config.py  main.py  subscription_bot.py  test.ipynb
